--- a/configure.ac
+++ b/configure.ac
@@ -1,10 +1,10 @@
 #  -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
-PACKAGE = nanofs
+PACKAGE = nanofs-fuse
 VERSION = 0.3.0
 AC_CONFIG_MACRO_DIR([m4])
-AC_INIT([nanofs], [0.3.0], [paulino@dte.us.es])
+AC_INIT([nanofs-fuse], [0.3.0], [paulino@dte.us.es])
 
 AM_INIT_AUTOMAKE([foreign])
 
